fixed text overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,6 @@ body{
   padding:0;
   border:0;
 }
+iframe div{
+  word-wrap: break-word;
+}
